--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link href="css/index.css" rel="stylesheet">
 <script src="js/scripts.js"></script> 
 
