--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <div class="rowTitle">
 	<h1> Sanam Lakhotra  </h1> 
 	<p><a style="color:white"> Web Developer , Software Engineer   </a>    </p>
-	<input type="button" value="Resume" class="buttonResume" style="">
-	<input type="button" value="Contact Me" class="buttonContactMe"style="">
+	<a href="document/resume.pdf"><div class="buttonResume">Resume</div></a>
+	<a href="#ContactUs"><div class="buttonContactMe">Contact </div></a>
 </div>
 
 <div class="row3">
@@ -110,7 +110,7 @@ I declare that my assessment is wholly my own work in accordance with Seneca Aca
 
 
 
-  <div class="container">
+  <div class="container" id="ContactUs">
   
     <div class="screen">
      
